--- a/mwptools/index.html
+++ b/mwptools/index.html
@@ -13,7 +13,7 @@ cannot be located, but<br>
 countless more exist.<br> 
 </p>
 <p style="text-align: center;">
-<img src="404.png">
+<img src="./404.png">
 <p>
     <hr>
 <!-- Created: Sat Dec  9 19:42:39 GMT 2006 -->
