--- a/404.html
+++ b/404.html
@@ -18,7 +18,8 @@ countless more exist.<br>
     <hr>
 <!-- Created: Sat Dec  9 19:42:39 GMT 2006 -->
 <!-- hhmts start -->
-Last modified: Sat Dec  9 19:48:45 GMT 2006
+<p>
+  If you're looking for mwptools documentation, that lives on <a href="https://stronnag.codeberg.page/mwptools/">codeberg.org</a>
 <!-- hhmts end -->
   </body>
 </html>
